...
                    icon: const Icon(
                      Icons.open_in_new,
                      size: 16,
                      color: Color(0xFF398FDE),
                    ),
                    label: const Text(
                      'View Course',
                      style: TextStyle(
                        fontWeight: FontWeight.w600,
                        color: Color(0xFF398FDE),
                      ),
                    ),
                    style: OutlinedButton.styleFrom(
...
